# Generated by Django 5.0 on 2024-12-28 18:25

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('announcements', '__first__'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Projet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nom', models.CharField(max_length=200)),
                ('description', models.TextField()),
                ('cout_total', models.DecimalField(decimal_places=2, max_digits=10)),
                ('date_debut', models.DateField()),
                ('date_fin', models.DateField()),
                ('statut', models.CharField(choices=[('en_attente', 'En Attente'), ('en_cours', 'En Cours'), ('termine', 'Terminé'), ('annule', 'Annulé')], default='en_attente', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('annonce', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='projets', to='announcements.annonce')),
            ],
            options={
                'verbose_name': 'Projet',
                'verbose_name_plural': 'Projets',
            },
        ),
        migrations.CreateModel(
            name='CotisationProjet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('montant_calcule', models.DecimalField(decimal_places=2, max_digits=10)),
                ('est_paye', models.BooleanField(default=False)),
                ('date_paiement', models.DateTimeField(blank=True, null=True)),
                ('statut', models.CharField(choices=[('en_attente', 'En Attente'), ('paye', 'Payé'), ('en_retard', 'En Retard')], default='en_attente', max_length=20)),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='cotisations_projet', to=settings.AUTH_USER_MODEL)),
                ('projet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='cotisations_projet', to='projects.projet')),
            ],
            options={
                'verbose_name': 'Cotisation Projet',
                'verbose_name_plural': 'Cotisations Projets',
            },
        ),
        migrations.CreateModel(
            name='ProjetBloc',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('bloc', models.CharField(max_length=10)),
                ('est_inclus', models.BooleanField(default=True)),
                ('projet', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='blocs', to='projects.projet')),
            ],
            options={
                'unique_together': {('projet', 'bloc')},
            },
        ),
    ]
